mutation builders refactoring